--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -66,6 +66,8 @@
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 
     &--1 {
       background-image: linear-gradient(
@@ -125,15 +127,15 @@
         rgba($color-primary-light, 0.85),
         rgba($color-primary-dark, 0.85)
       );
-
-      &--3 {
-        background-image: linear-gradient(
-          to right bottom,
-          rgba($color-tertiary-light, 0.85),
-          rgba($color-tertiary-dark, 0.85)
-        );
-      }
     }
+    &--3 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-tertiary-light, 0.85),
+        rgba($color-tertiary-dark, 0.85)
+      );
+    }
+
     //doublecheck this
   }
 
