--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -9,7 +9,7 @@
 
   &__icon {
     font-size: 6rem;
-    margin: 0.5rem;
+    margin-bottom: 0.5rem;
     display: inline-block;
     background-image: linear-gradient(
       to right,
